fix layout issues and change hero look

--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,49 +1,47 @@
-.about {
+.about-content {
     display: flex;
     flex-direction: column;
+    margin-top: 2rem;
 }
 
-.about__photo {
+.about-content__image-container {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.about-content__image {
     position: relative;
-    height: fit-content;
+    width: 100%;
+    filter: grayscale(100%);
+    display: block;
+    transition: all 0.25s ease-in-out;
 
-    &::after {
-        position: absolute;
-        content: "";
-        border: 1px solid black;
-        top: 1rem;
-        left: 1rem;
-        z-index: -1;
-        width: 100%;
-        height: 100%;
+    &:hover {
+        filter: none;
     }
+}
 
-    img {
-        width: 100%;
-        filter: grayscale(100%);
-        transition: filter 0.25s ease-in;
+.about-content__details {
+    margin-top: 4rem;
 
-        &:hover {
-            filter: none;
-        }
+    p {
+        margin-top: 0;
     }
 }
 
 @media screen and (min-width: 768px) {
-    .about {
-        flex-direction: row;
+    .about-content {
+        flex-direction: row-reverse;
     }
 
-    .about__details {
-        width: 100%;
-        padding-right: 5rem;
-
-        p {
-            margin-top: 0;
-        }
+    .about-content__details {
+        width: 55%;
+        margin-top: 0;
     }
 
-    .about__photo {
-        width: 50%;
+    .about-content__image-container {
+        width: 40%;
+        margin-right: 0;
     }
 }
