--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -25,6 +25,7 @@ h2,
 h3,
 h4 {
     margin-bottom: 1rem;
+    font-family: "Barlow", sans-serif;
 }
 
 h1 {
@@ -41,11 +42,6 @@ h3 {
 
 h4 {
     font-size: 2rem;
-}
-
-p,
-ul {
-    font-feature-settings: "cv03", "cv04", "cv11";
 }
 
 a,
