--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -7,21 +7,21 @@
 
 .form-input,
 .form-textarea {
-    outline: none;
-    box-shadow: none;
+    appearance: none;
     padding: 2rem;
     width: 100%;
     margin-top: 2rem;
-    // transition: border 0.25s ease-in-out;
+    border: 1px solid $black;
+    transition: border 0.25s ease-in-out;
+    font-family: "Jetbrains mono", monospace;
 
     &::placeholder {
-        font-family: "Jetbrains mono", monospace;
-        text-transform: uppercase;
         color: $black;
         opacity: 0.7;
     }
 
     &:focus {
+        outline: none !important;
         border: 1px solid $accent;
     }
 }
@@ -50,8 +50,4 @@
             width: 49%;
         }
     }
-
-    // .btn-form {
-    //     width: auto;
-    // }
 }
