--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -4,7 +4,6 @@
     padding: 1rem 0;
     color: $white;
     background-color: $black;
-    border-top: 1px solid $white;
 
     p {
         font-size: 1.3rem;
