--- a/src/scss/_utilities.scss
+++ b/src/scss/_utilities.scss
@@ -1,6 +1,6 @@
 .section,
 .section-full {
-    margin-top: 10rem;
+    margin-top: 5rem;
     padding: 0 2rem;
     margin-left: auto;
     margin-right: auto;
@@ -51,4 +51,33 @@
 
 .font-mono {
     font-family: "Jetbrains Mono", monospace;
+}
+
+.image-wrapper {
+    position: relative;
+    width: fit-content;
+
+    &::after {
+        position: absolute;
+        content: "";
+        border: 1px solid $black;
+        top: 1rem;
+        left: 1rem;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+        transition: all 0.25s ease-in-out;
+    }
+
+    &:hover::after {
+        top: 1.5rem;
+        left: 1.5rem;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .section,
+    .section-full {
+        margin-top: 10rem;
+    }
 }
